Updating MONGOHQ_URL

--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -61,9 +61,7 @@ development:
 production:
   sessions:
     default:
-      database: ENV['MONGOHQ_URL']
-      hosts:
-        - localhost:27017
+      uri: <%= ENV['MONGOHQ_URL'] %>
       options:
         consistency: :strong
 test:
